// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should throw if there is no constraint 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-constraint/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-custom.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:0:0)

Error: for a test to work, it must have a \`constraint\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:0:0)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-constraint/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-custom.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:0:0)

Error: for a test to work, it must have a \`constraint\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:0:0)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
",
]
`;

exports[`betterer should throw if there is no test 1`] = `
Array [
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|

",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-test/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-custom.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:0:0)

Error: for a test to work, it must have a \`test\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:0:0)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
",
  "
   / | /     _         _   _
 '-.ooo.-'  | |__  ___| |_| |_ ___ _ __ ___ _ __
---ooooo--- | '_ // _ / __| __/ _ / '__/ _ / '__|
 .-'ooo'-.  | |_)|  __/ |_| ||  __/ | |  __/ |
   / | /    |_.__//___|/__|/__/___|_|  /___|_|


Error: could not read config from \\"<project>/fixtures/test-betterer-custom-no-test/.betterer\\". 😔
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
      at <project>/packages/betterer/dist/betterer.js:0:0
      at runContext (<project>/packages/betterer/dist/betterer.js:0:0)
      at <project>/test/betterer-custom.spec.ts:0:0
      at Object.<anonymous> (<project>/test/betterer-custom.spec.ts:0:0)

Error: for a test to work, it must have a \`test\` function. ❌
      at Object.createTestConfig (<project>/packages/betterer/dist/test/config.js:0:0)
      at new BettererTest (<project>/packages/betterer/dist/test/test.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.forEach (<anonymous>)
      at BettererContextΩ._getTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at <project>/packages/betterer/dist/context/context.js:0:0
      at Array.map (<anonymous>)
      at BettererContextΩ._initTests (<project>/packages/betterer/dist/context/context.js:0:0)
      at BettererContextΩ.run (<project>/packages/betterer/dist/context/context.js:0:0)
      at Object.serial (<project>/packages/betterer/dist/runner/runner.js:0:0)
",
]
`;
